add style selected conversation

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@ assets/app.scss
 assets/app.css.map
 assets/all.css
 assets/tailwindcss.css
+
+assets/js/jquery.js
 Chat_Messenger - Web App.aco
 image_processing20200719-5584-1bmi1a8.png
